objects/BMCServiceDesk__RemedyforceSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings to store Remedyforce settings</description>
    <fields>
        <fullName>BMCServiceDesk__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__value__c</fullName>
        <label>value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Remedyforce Settings</label>
</CustomObject>